feat: adding gif for characters special powers